Изменяет классы по БЭМ + сборка через СААС ХИРО и ОСОБЕННОСТИ

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,5 @@
 @import '../sass/components/header/nav';
 @import '../sass/components/logo';
 @import '../sass/components/header/contacts';
+@import '../sass/components/main/hero-section';
+@import '../sass/components/main/features-sectrion';
