--- a/sass/utils/_comon.scss
+++ b/sass/utils/_comon.scss
@@ -15,6 +15,19 @@ a {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.sections-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+
+  margin: 0;
+  padding: 0;
 }
 
 %list {
@@ -23,7 +36,7 @@ a {
   margin: 0;
 }
 
-%visually-hidden {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
