--- a/css/main.css
+++ b/css/main.css
@@ -15,15 +15,6 @@ a {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .sections-title {
@@ -35,7 +26,7 @@ a {
   padding: 0;
 }
 
-.nav__list, .contacts__list, .features__list {
+.network__list, .nav__list, .contacts__list, .features__list, .we-do__list, .team__list, .clients__list {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -55,6 +46,73 @@ a {
   overflow: hidden;
 }
 
+.no-gap {
+  display: block;
+  max-width: 100%;
+}
+
+/* ЛОГО */
+.logo {
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  display: inline-block;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+
+.logo--black {
+  color: #000000;
+}
+
+.logo--white {
+  color: #ffffff;
+}
+
+.logo__text {
+  color: #2196f3;
+}
+
+.network__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-align: center;
+  margin-top: 16px;
+}
+
+.network__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border-radius: 50%;
+  width: 44px;
+  height: 44px;
+  color: #afb1b8;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.network__link:hover, .network__link:focus {
+  background-color: #2196f3;
+  color: #ffffff;
+  outline: none;
+}
+
+.network__icon {
+  fill: currentColor;
+}
+
 .page-header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -68,7 +126,7 @@ a {
   border-bottom: 1px solid #ececec;
 }
 
-.container {
+.container--nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -133,29 +191,6 @@ a {
   margin-top: 28px;
   background-color: #2196f3;
   border-radius: 2px;
-}
-
-/* ЛОГО */
-.logo {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  display: inline-block;
-  padding-top: 24px;
-  padding-bottom: 25px;
-}
-
-.logo--black {
-  color: #000000;
-}
-
-.logo--white {
-  color: #ffffff;
-}
-
-.logo__text {
-  color: #2196f3;
 }
 
 /* Контакты в хедере */
@@ -297,5 +332,163 @@ a {
   line-height: 1.71;
   margin: 0;
   padding: 0;
+}
+
+/* WE DO SECTION */
+.we-do {
+  padding-bottom: 94px;
+}
+
+.we-do__list {
+  margin-top: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: calc(-1 * 30px);
+}
+
+.we-do__item {
+  margin-left: 30px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: calc(100% / 3 - 30px);
+          flex-direction: calc(100% / 3 - 30px);
+}
+
+.we-do__thumb {
+  position: relative;
+}
+
+.we-do__text {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(47, 48, 58, 0.8);
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+/* OUR TEAM SECTION */
+.team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: #f5f4fa;
+}
+
+.team__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: calc(-1 * 30px);
+  margin-top: 50px;
+}
+
+.team__item {
+  margin-left: 30px;
+  -ms-flex-preferred-size: calc(100% / 4 - 30px);
+      flex-basis: calc(100% / 4 - 30px);
+  width: 270px;
+  height: 428px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.teamate-card {
+  padding: 30px 32px;
+}
+
+.teamate-card__title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.teamate-card__text {
+  color: #757575;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.18;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  margin-top: 10px;
+}
+
+/* НАШИ КЛИЕНТЫ */
+.clients {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.clients__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 50px;
+}
+
+.clients__item {
+  width: 170px;
+  height: 90px;
+}
+
+.clients__item:not(:first-child) {
+  margin-left: 30px;
+}
+
+.clients__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  color: #afb1b8;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients__link:focus, .clients__link:hover {
+  border-color: #2196f3;
+  color: #2196f3;
+  outline: none;
+}
+
+.clients__icon {
+  fill: currentColor;
 }
 /*# sourceMappingURL=main.css.map */
