--- a/sass/components/header/_page-header.scss
+++ b/sass/components/header/_page-header.scss
@@ -5,7 +5,7 @@
   border-bottom: 1px solid #ececec;
 }
 
-.container {
+.container--nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
