--- a/sass/utils/_comon.scss
+++ b/sass/utils/_comon.scss
@@ -15,9 +15,6 @@ a {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
 }
 
 .sections-title {
@@ -50,7 +47,7 @@ a {
   overflow: hidden;
 }
 
-%no-gap {
+.no-gap {
   display: block;
   max-width: 100%;
 }
