Футер по БЭМ И  СААС

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,4 +9,7 @@
 @import '../sass/components/main/features-section';
 @import '../sass/components/main/we-do-section';
 @import '../sass/components/main/team-section';
-@import '../sass/components/main/_clients.scss';
+@import '../sass/components/main/clients';
+@import '../sass/components/footer/page-footer';
+@import '../sass/components/footer/address';
+@import '../sass/components/footer/subscribe';
