--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ a {
   padding: 0;
 }
 
-.network__list, .nav__list, .contacts__list, .features__list, .we-do__list, .team__list, .clients__list {
+.network__list, .nav__list, .contacts__list, .features__list, .we-do__list, .team__list, .clients__list, .address__list {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -85,6 +85,10 @@ a {
   margin-top: 16px;
 }
 
+.network__list--footer {
+  margin-top: 20px;
+}
+
 .network__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -98,9 +102,17 @@ a {
   border-radius: 50%;
   width: 44px;
   height: 44px;
+}
+
+.network__link--grey {
   color: #afb1b8;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.network__link--white {
+  color: #ffffff;
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .network__link:hover, .network__link:focus {
@@ -111,6 +123,25 @@ a {
 
 .network__icon {
   fill: currentColor;
+}
+
+/* В ФУТЕРЕ */
+.network__text {
+  margin: 0;
+  padding: 0px;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.network {
+  margin-left: 70px;
+}
+
+.network__item:not(:first-child) {
+  margin-left: 10px;
 }
 
 .page-header {
@@ -489,6 +520,127 @@ a {
 }
 
 .clients__icon {
+  fill: currentColor;
+}
+
+/* FOOTER */
+.footer {
+  background-color: #2f303a;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.container--footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+}
+
+.social-links {
+  margin-left: 70px;
+}
+
+.address {
+  margin-top: 20px;
+  font-style: inherit;
+}
+
+.address__list,
+.address__item:last-child {
+  margin-top: 9px;
+}
+
+.address__text {
+  color: #ffffff;
+}
+
+.address__link {
+  color: rgba(255, 255, 255, 0.6);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address__link:hover, .address__link:focus {
+  color: #2196f3;
+}
+
+/* РАССЫЛКА */
+.subscribe {
+  margin-left: 93px;
+}
+
+.subscribe__text {
+  margin: 0;
+  padding: 0;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.subscribe__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 20px;
+}
+
+.subscribe__label {
+  display: inline-block;
+}
+
+.subscribe__input {
+  padding: 15px 16px;
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+.subscribe__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 12px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 200px;
+  height: 50px;
+  color: #ffffff;
+  background-color: #2196f3;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  border: 1px solid transparent;
+  border-radius: 4px;
+}
+
+.subscribe__icon {
+  margin-left: 10px;
   fill: currentColor;
 }
 /*# sourceMappingURL=main.css.map */
