--- a/sass/components/_networks.scss
+++ b/sass/components/_networks.scss
@@ -6,6 +6,10 @@
 
   text-align: center;
   margin-top: 16px;
+
+  &--footer {
+    margin-top: 20px;
+  }
 }
 
 .network__link {
@@ -17,8 +21,15 @@
   width: 44px;
   height: 44px;
 
-  color: #afb1b8;
-  transition: color 250ms $bazier, background-color 250ms $bazier;
+  &--grey {
+    color: #afb1b8;
+    transition: color 250ms $bazier, background-color 250ms $bazier;
+  }
+
+  &--white {
+    color: $white-color;
+    background-color: $network-bg-color;
+  }
 
   &:hover,
   &:focus {
@@ -30,4 +41,26 @@
 
 .network__icon {
   fill: currentColor;
+}
+
+/* В ФУТЕРЕ */
+
+.network__text {
+  margin: 0;
+  padding: 0px;
+
+  color: $white-color;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.network {
+  margin-left: 70px;
+}
+
+.network__item:not(:first-child) {
+  margin-left: 10px;
 }
