бекдроп, модалка, форма по БЭМ и СААС

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,7 @@
 @import '../sass/components/footer/page-footer';
 @import '../sass/components/footer/address';
 @import '../sass/components/footer/subscribe';
+@import '../sass/components/backdrop/backdrop';
+@import '../sass/components/backdrop/modal';
+@import '../sass/components/backdrop/callback-form';
+@import '../sass/components/backdrop/chekbox';
