портфолио  по БЭМ и СААС

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,3 +17,6 @@
 @import '../sass/components/backdrop/modal';
 @import '../sass/components/backdrop/callback-form';
 @import '../sass/components/backdrop/chekbox';
+@import '../sass/components/portfolio/portfolio-page';
+@import '../sass/components/portfolio/portfolio-buttons';
+@import '../sass/components/portfolio/examples';
