--- a/css/main.css
+++ b/css/main.css
@@ -58,15 +58,15 @@ a {
   font-size: 26px;
   line-height: 1.2;
   display: inline-block;
+}
+
+.logo--header {
+  color: #000000;
   padding-top: 24px;
   padding-bottom: 25px;
 }
 
-.logo--black {
-  color: #000000;
-}
-
-.logo--white {
+.logo--footer {
   color: #ffffff;
 }
 
