--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -7,14 +7,14 @@
   line-height: 1.2;
 
   display: inline-block;
-  padding-top: 24px;
-  padding-bottom: 25px;
 
-  &--black {
+  &--header {
     color: $black-logo;
+    padding-top: 24px;
+    padding-bottom: 25px;
   }
 
-  &--white {
+  &--footer {
     color: $white-color;
   }
 }
