--- a/sass/components/backdrop/_chekbox.scss
+++ b/sass/components/backdrop/_chekbox.scss
@@ -43,17 +43,20 @@
   top: 50%;
   left: 0px;
   transform: translateY(-50%);
-  transition: opacity 250ms $bazier;
+  border: 2px solid black;
+  border-radius: 2px;
+  transition: border 250ms $bazier;
 
-  &--check {
+  &--check use {
     opacity: 0;
+    transition: opacity 250ms $bazier, border 250ms $bazier;
   }
 }
 
-.checkbox__input:checked ~ .checkbox__icon--check {
+.checkbox__input:checked ~ .checkbox__icon--check use {
   opacity: 1;
 }
 
-.checkbox__input:checked ~ .checkbox__icon--uncheck {
-  opacity: 0;
+.checkbox__input:checked ~ .checkbox__icon--check {
+  border: none;
 }
